modules/ballerina-core/src/test/resources/samples/parser/invalidSyntax/MainFuncWithoutName.bal
package samples.parser.invalidSyntax;

function {
	int b;
	reply m;
}
